# sepsis-mlops

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: redteam.md  reviser.md  spec-writer.md
.claude/skills/mentor/: SKILL.md
.claude/skills/review-loop/: SKILL.md
.github/workflows/: ci.yml
console-web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console-web/src/: App.tsx  api.ts  index.css  main.tsx
console-web/src/components/: Actions.tsx  AuditTrail.tsx  ConfirmDialog.tsx  GatePanel.tsx  MlflowLink.tsx  RetrainPanel.tsx  StatusBar.tsx  VersionDetail.tsx  VersionList.tsx  (+1 more)
console-web/tests/: Actions.test.tsx  App.test.tsx  AuditTrail.test.tsx  ConfirmDialog.test.tsx  GatePanel.test.tsx  StatusBar.test.tsx  VersionList.test.tsx  api.read.test.ts  api.test.ts
deploy/: Dockerfile  README.md  docker-compose.yml  serving-entrypoint.sh
deploy/bench/: Dockerfile.bench
deploy/k8s/: configmap.yaml  deployment.yaml  networkpolicy.yaml  service.yaml
deploy/monitoring/: docker-compose.yml  prometheus.host.yml  prometheus.yml
deploy/nginx/: Dockerfile  default.conf
design/: README.md  WORKFLOW.md  h1_decisions.md  h1_handoff.md  h1_handoff_review.md  h1_review.md  h2_decisions.md  h2_handoff.md  h2_handoff_review.md  h2_review.md  h3_decisions.md  h3_handoff.md  h3_handoff_review.md  h3_review.md  h4_drift_decisions.md  h4_drift_handoff.md  h4_drift_handoff_review.md  h4_drift_review.md  h4_retrain_decisions.md  h4_retrain_handoff.md  h4_retrain_handoff_review.md  h4_retrain_review.md  h4_serving_decisions.md  h4_serving_handoff.md  h4_serving_handoff_review.md  h4_serving_review.md
design/console/: decisions.md  handoff_backend.md  handoff_backend_review.md  handoff_frontend.md  handoff_frontend_review.md  mentor-brief.md  review.md
design/console-prep/: decisions.md  handoff.md  handoff_review.md  review.md
design/h1/: decisions.md  handoff.md  review.md
design/h2/: decisions.md  handoff.md  handoff_review.md  review.md
design/h3/: decisions.md  handoff.md  handoff_review.md  review.md
design/replay/: handoff_round_a.md  handoff_round_c.md  round_b_evidence.md  round_c_evidence.md
docs/adr/: serving-scaling.md
docs/design/: README.md  WORKFLOW.md
docs/reports/: eda_findings.md  h2_results.md  h3_results.md  load_test_results.md  onprem_compose_smoke.md  serving_benchmark.md  serving_benchmark_k8s.md  serving_benchmark_measurements.json  serving_benchmark_summary.md  smoke_findings.md
docs/research/: 01_models.md  02_features_missing.md  03_evaluation.md  04_leakage_generalization.md  05_serving.md  README.md
loadtest/: __init__.py  locustfile.py  patient_pool.py  request_builder.py  run_matrix.py
loadtest/results/: n1000_stats.csv  n1000_stats_history.csv  n10_stats.csv  n10_stats_history.csv  n1_stats.csv  n1_stats_history.csv  n200_stats.csv  n200_stats_history.csv  n500_stats.csv  n500_stats_history.csv  n50_stats.csv  n50_stats_history.csv  sm3_n200_stats.csv  sm3_n200_stats_history.csv  summary.tsv  sweep.sh
reports/: eda_findings.md  h1_diagnostics.md  h3_results.md  replay_gauge_series.txt  replay_p000001_control.txt  replay_p000018_septic.txt  replay_ward_3patients.txt  smoke_findings.md
research/: 01_models.md  02_features_missing.md  README.md
scripts/: README.md  build_cache.py  build_dataset.py  download_data.sh  eda.py  gen_synth_bundle.py  h2a_utility_check.py  h2b_train_trees.py  h2c_train_gru.py  h2d_select.py  h3b_crosssite.py  h3c_mask_check.py  h4_drift_loop_smoke.py  h4d_a_smoke.py  h4d_b_smoke.py  h4r_a_smoke.py  h4r_b_smoke.py  h4r_c_smoke.py  h4s_b_smoke.py  h4s_c_smoke.py  h4s_export_bundle.py  h4s_smoke.py  mutation_test.py  replay_patient.py  replay_ward.py  run_diagnostics.py  smoke_m2m.py
scripts/bench/: k8s_bench_client.py  run_k8s_benchmark.py  run_serving_benchmark.py
scripts/data/: README.md  build_cache.py  build_dataset.py  download_data.sh  eda.py  run_diagnostics.py
scripts/h2/: README.md  h2a_utility_check.py  h2b_train_trees.py  h2c_train_gru.py  h2d_select.py  smoke_m2m.py
scripts/h3/: README.md  h3b_crosssite.py  h3c_mask_check.py
scripts/h4/: README.md  gen_synth_bundle.py  h4_drift_loop_smoke.py  h4d_a_smoke.py  h4d_b_smoke.py  h4r_a_smoke.py  h4r_b_smoke.py  h4r_c_smoke.py  h4s_b_smoke.py  h4s_c_smoke.py  h4s_export_bundle.py  h4s_smoke.py
scripts/hooks/: pre-push
scripts/replay/: README.md  replay_patient.py  replay_ward.py
scripts/tools/: README.md  ci_local.sh  mutation_test.py
smoke/: __init__.py  data.py  dataset.py  model.py  train_smoke.py
src/sepsis/: __init__.py  config.py
src/sepsis_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/bench/: conftest.py  test_bench_result_contract.py  test_load_driver.py
tests/console/: conftest.py  test_api_validation.py  test_approve.py  test_audit_append_only.py  test_audit_schema.py  test_leakage_invariant.py  test_mlflow_link.py  test_propagation.py  test_reconcile_seed.py  test_rollback.py  test_select_baseline_guard.py  test_serialize_chain.py  test_version_identifier.py  test_versions_classify.py
tests/console_prep/: _serve_helpers.py  conftest.py  test_deploy_rollback_symmetry.py  test_drift_alignment.py  test_leakage_invariants.py  test_materialize_overwrite_guard.py  test_persist_atomic.py  test_pred_prob_latest_gauge.py  test_retrain_meta.py  test_serve_double_contract.py  test_serve_reload.py  test_validate_empty_guard.py
tests/data/: test_leakage_invariants.py
tests/deploy/: test_compose_contract.py  test_serving_entrypoint.py
tests/drift/: test_detect_sample_size.py  test_window_threadsafe.py
tests/eval/: test_official_equivalence.py  test_threshold.py
tests/replay/: test_engine.py  test_orchestrator.py  test_psv_source.py
tests/retrain/: test_promote.py
tests/serve/: conftest.py  test_app_contract.py  test_obs_gate_contract.py  test_predictor.py  test_preprocess_rt.py  test_xgb_serving_contract.py
(+139 files in other folders)
