[project]
name = "sepsis-mlops"
version = "0.1.0"
description = "MLOps skeleton for real-time sepsis early warning (PhysioNet/CinC 2019)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=2.18",
    "numpy>=2.0",
    "pandas>=2.2,<3",  # mlflow stable caps pandas<3
    "prometheus-client>=0.25.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# PyPI stays the default index; the pytorch CPU index is used ONLY for torch.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
