[project]
name = "sepsis-mlops"
version = "0.1.0"
description = "MLOps skeleton for real-time sepsis early warning (PhysioNet/CinC 2019)"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.7.21",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=2.18",
    "numpy>=2.0",
    "pandas>=2.2,<3",  # mlflow stable caps pandas<3
    "prometheus-client>=0.25.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
# dev 그룹은 `uv run`/`uv sync` 가 기본 포함한다(PEP 735). pytest 를 프로젝트 env 에
# 넣어야 `uv run pytest` 가 프로젝트 패키지(sepsis·pandas 등)를 보는 진짜 단일 커맨드가
# 된다 — 안 넣으면 uv 가 pytest 를 격리 tool env 로 띄워 pandas 미발견으로 수집이 깨진다.
dev = [
    "locust>=2.44.4",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# 한 커맨드(`uv run pytest`)로 전체 스위트(console·console_prep·replay)를 돌린다.
# pythonpath=src: editable 설치 없이도 `sepsis` import 가능 — 매번 `PYTHONPATH=` 칠 필요 제거.
testpaths = ["tests"]
# src: `sepsis` import. ".": 최상위 `loadtest.*`(부하테스트 (나) 드라이버) import
#   — locustfile/run_matrix는 CLI(`locust -f loadtest/...`)로도 도는 최상위 경로라 여기 둔다.
#   (패키지명 `loadtest`: `bench`는 테스트 패키지 tests/bench 와 sys.path 충돌.)
pythonpath = ["src", "."]
# ROS(jazzy)가 셸 PYTHONPATH로 주입하는 pytest11 플러그인(launch_ros·launch_testing)이
# 자동수집되며 lark 미설치로 collection을 깨뜨린다(이 프로젝트와 무관한 환경 누수).
# 이 둘만 핀오프한다 — PYTEST_DISABLE_PLUGIN_AUTOLOAD로 전부 끄면 console_prep(fastapi
# TestClient 등)이 의존하는 플러그인까지 죽어 collection error가 났다(검증됨). 설치 안 된
# 환경에서도 `-p no:<name>`은 무해.
addopts = "-p no:launch_ros -p no:launch_testing"
cache_dir = "var/.pytest_cache"       # 런타임 캐시는 루트가 아니라 var/ 아래로

[tool.ruff]
src = ["src", "tests", "scripts"]
target-version = "py312"
line-length = 100
cache-dir = "var/.ruff_cache"

[tool.ruff.lint]
# 보수적 기본셋: pyflakes(F)·pycodestyle(E)·isort(I)·pyupgrade(UP)·flake8-bugbear(B).
# 스타일 재작성은 최소화하고 실버그(미사용/미정의·shadowing)만 우선 잡는다.
select = ["F", "E", "I", "UP", "B"]
ignore = [
    "E501",   # 줄길이는 formatter 가 관리, 린트 실패로 막지 않음
    # --- 아래는 이 코드베이스의 의도된 관습(방어적 침묵이 아니라 명시적 선택) ---
    "E741",   # `l` = length/label 로 수치·EDA 코드에서 관습적으로 쓴다
    "E702",   # 스모크·eval 스크립트의 compact `x; y` 한 줄 스타일(가독성 목적)
    "E731",   # 스크립트의 짧은 lambda 할당 — def 승격은 불필요한 churn
    "B905",   # zip pair 는 구조상 등길이(등길이 계약은 상위에서 보장) — strict= 는 근거 없는 churn
]

[tool.ruff.lint.per-file-ignores]
# 이미지 슬림화용 lazy import 설계(console import 체인에서 torch/numpy 제외): dataclass
# 필드/반환 어노테이션이 `from __future__ import annotations` 로 문자열 평가만 되고
# 실 심볼은 함수 내부에서 lazy import 된다. ruff F821 은 이를 미정의로 오탐한다(실행은 정상).
"src/sepsis/serve/bundle.py" = ["F821"]
"src/sepsis/retrain/deploy.py" = ["F821"]
# 독립 실행 스크립트는 import 전에 os.environ/warnings.filterwarnings 를 세팅한다(예:
# lightgbm import 전 경고 필터, serve 번들 경로 env). 이 pre-import 셋업은 의도된 것 —
# E402(module import not at top)는 이 패턴에선 오탐이다.
"scripts/**" = ["E402"]

[tool.coverage.run]
source = ["sepsis"]
branch = true
data_file = "var/.coverage"       # 커버리지 데이터도 var/ 아래로(루트 정리)

[tool.coverage.report]
# 회귀 floor(품질 바가 아님 — 품질 바는 뮤테이션 하네스다). 커버리지가 실수로 이 밑으로
# 떨어지면 CI 실패. 현재 ~57% → 여유 두고 55. 커버리지가 오르면 이 값도 래칫으로 올릴 것.
fail_under = 55

# PyPI stays the default index; the pytorch CPU index is used ONLY for torch.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
